fix: changed lang

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="toDo-List-container container">
         <div class="toDo-header">
-            <input class="toDo-title header-title" type="text" value="Список дел" disabled="disabled">
+            <input class="toDo-title header-title" type="text" value="To Do List" disabled="disabled">
             <a href="#" class="btn btn-default" data-btn="sort" style="padding: 5px; font-size: 12px;">
                 <img src="svg/arrow-down-up.svg" class="toDo-sort" data-btn="sort" alt="down-up">
             </a>
